# rs-cqrs-es

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.write  README.md
application/read-api-server/: Cargo.toml
application/read-server/: Cargo.toml
application/write-api-server/: Cargo.toml
application/write-server/: Cargo.toml
applications/read-api-server/: Cargo.toml
applications/read-api-server/src/: main.rs
applications/write-api-server/: Cargo.toml
applications/write-api-server/src/: main.rs
config/: read-api-server.toml  write-api-server.toml
modules/command/domain/: Cargo.toml
modules/command/domain/src/: aggregate_id.rs  lib.rs  order.rs  product.rs  value_object.rs
modules/command/domain/src/order/: order_error.rs  order_id.rs  order_item.rs  order_item_id.rs
modules/command/domain/src/product/: product_name.rs
modules/command/domain/src/value_object/: discount.rs  price.rs  quantity.rs
tf/: ecr.tf  lambda.tf  variables.tf
