[workspace]
members = [
    "applications/write-api-server",
    "applications/read-api-server",
    "modules/command/domain"
]

[workspace.dependencies]
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.58"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
config = "0.14.0"

