[workspace]
resolver = "2"
members = [
    "applications/write-api-server",
    "applications/read-api-server",
    "modules/command/domain"
]

[workspace.dependencies]
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.58"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tower = "0.5.1"
tower-http = "0.6.1"
hyper = "1.4.1"
chrono = "0.4.38"
thiserror = "1.0.64"
rust_decimal = "1.36.0"

# test
axum-test = "16.2.0"
rstest = "0.23.0"