[package]
name = "write-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
config = { workspace = true }
command-domain = { path = "../../modules/command/domain" }